Prevented admin styling from spilling into other admin pages

--- a/admin/css/components/_buttons.scss
+++ b/admin/css/components/_buttons.scss
@@ -1,7 +1,5 @@
-.wp-core-ui {
-  .button-primary {
-    display: block;
-  }
+.button-primary {
+  display: block;
 }
 // Remove Site Build Stage Icon
 .remove-site-build-stage {
