--- a/admin/css/mm-site-build-status-admin.scss
+++ b/admin/css/mm-site-build-status-admin.scss
@@ -3,18 +3,21 @@
  * included in this file.
  */
 
-// Base
-@import './base/settings';
-@import './base/media-queries';
-@import './base/functions';
-@import './base/mixins';
-@import './base/base';
+// Enclosed with body class so CSS only effects admin plugin page
+body.toplevel_page_maintenance-mode-site-build-status {
+  // Base
+  @import './base/settings';
+  @import './base/media-queries';
+  @import './base/functions';
+  @import './base/mixins';
+  @import './base/base';
 
-// Components
-@import './components/buttons';
-@import './components/headings';
-@import './components/site-build-stage';
-@import './components/text';
-@import './components/forms';
-@import './components/images';
-@import './components/errors';
+  // Components
+  @import './components/buttons';
+  @import './components/headings';
+  @import './components/site-build-stage';
+  @import './components/text';
+  @import './components/forms';
+  @import './components/images';
+  @import './components/errors';
+}
